--- a/components/camel-spring-ldap/pom.xml
+++ b/components/camel-spring-ldap/pom.xml
@@ -9,75 +9,123 @@
  License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
  OF ANY KIND, either express or implied. See the License for the specific 
  language governing permissions and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.apache.camel</groupId>
-        <artifactId>components</artifactId>
-        <version>2.14-SNAPSHOT</version>
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+<!--     <parent> -->
+<!--         <groupId>org.apache.camel</groupId> -->
+<!--         <artifactId>components</artifactId> -->
+<!--         <version>2.12.2</version> -->
+<!--     </parent> -->
 
-    <artifactId>camel-spring-ldap</artifactId>
-    <packaging>bundle</packaging>
-    <name>Camel :: Spring LDAP</name>
-    <description>Camel support for Spring LDAP</description>
+	<groupId>com.sqli.camel</groupId>
+	<artifactId>camel-spring-ldap</artifactId>
+	<version>2.12.2-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<!-- <packaging>bundle</packaging> -->
+	<name>Camel :: Spring LDAP</name>
+	<description>Camel support for Spring LDAP</description>
 
-    <properties>
-        <camel.osgi.import.before.defaults>
-            org.springframework.ldap.*;version="[1.3,1.4)",
-            org.springframework.transaction.compensating.*;version="[1.3,1.4)"
-        </camel.osgi.import.before.defaults>
-        <camel.osgi.export.pkg>org.apache.camel.component.springldap.*</camel.osgi.export.pkg>
-        <camel.osgi.export.service>
-            org.apache.camel.spi.ComponentResolver;component=spring-ldap
-        </camel.osgi.export.service>
-    </properties>
+	<properties>
+		<camel.osgi.import.before.defaults>
+			org.springframework.ldap.*;version="[1.3,1.4)",
+			org.springframework.transaction.compensating.*;version="[1.3,1.4)"
+		</camel.osgi.import.before.defaults>
+		<camel.osgi.export.pkg>org.apache.camel.component.springldap.*</camel.osgi.export.pkg>
+		<camel.osgi.export.service>
+			org.apache.camel.spi.ComponentResolver;component=spring-ldap
+		</camel.osgi.export.service>
+        <!-- TODO remove -->
+		<spring-ldap-version>2.0.1.RELEASE</spring-ldap-version>
+		<camel-version>2.12.2</camel-version>
+		<slf4j-version>1.7.5</slf4j-version>
+		<mockito-version>1.9.5</mockito-version>
+	</properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-core</artifactId>
-        </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-core</artifactId>
+			<version>${camel-version}</version>
+		</dependency>
+		
+        <!-- TODO remove -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.12.4</version>
+		</dependency>
 
         <!-- spring LDAP -->
-        <dependency>
-            <groupId>org.springframework.ldap</groupId>
-            <artifactId>spring-ldap-core</artifactId>
-            <version>${spring-ldap-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.ldap</groupId>
-            <artifactId>spring-ldap-odm</artifactId>
-            <version>${spring-ldap-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.ldap</groupId>
-            <artifactId>spring-ldap-ldif-core</artifactId>
-            <version>${spring-ldap-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.ldap</groupId>
-            <artifactId>spring-ldap-ldif-batch</artifactId>
-            <version>${spring-ldap-version}</version>
-        </dependency>
+		<dependency>
+			<groupId>org.springframework.ldap</groupId>
+			<artifactId>spring-ldap-core</artifactId>
+			<version>${spring-ldap-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.ldap</groupId>
+			<artifactId>spring-ldap-odm</artifactId>
+			<version>${spring-ldap-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.ldap</groupId>
+			<artifactId>spring-ldap-ldif-core</artifactId>
+			<version>${spring-ldap-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.ldap</groupId>
+			<artifactId>spring-ldap-ldif-batch</artifactId>
+			<version>${spring-ldap-version}</version>
+		</dependency>
+		
+<!-- TODO : les dépendances ci-dessous devraient suffire -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.ldap</groupId> -->
+<!-- 			<artifactId>spring-ldap-core</artifactId> -->
+<!-- 			<version>2.0.1.RELEASE</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.ldap</groupId> -->
+<!-- 			<artifactId>spring-ldap-core-tiger</artifactId> -->
+<!-- 			<version>2.0.1.RELEASE</version> -->
+<!-- 		</dependency> -->
 
         <!-- testing -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-test-spring</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-    </dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<scope>test</scope>
+            <!-- TODO remove -->
+			<version>${slf4j-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-test-spring</artifactId>
+			<scope>test</scope>
+			<version>${camel-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+            <!-- TODO remove -->
+			<version>${mockito-version}</version>
+		</dependency>
+	</dependencies>
+	
+    <!-- TODO remove -->
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
